[package]
name = "floss-cli"
version = "0.1.0"
edition = "2021"
description = "在 Rust 中以子进程方式调用 FLARE FLOSS CLI，并可选解析 -j JSON 输出"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/ze-mu-zhou/floss-cli"
# 这是一个本地 wrapper；如需发布到 crates.io，请改成你自己的仓库地址。
repository = "https://github.com/ze-mu-zhou/floss-cli"
keywords = ["floss", "malware", "reverse-engineering", "cli", "wrapper"]
categories = ["command-line-utilities"]

[lints.rust]
warnings = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
allow_attributes = "deny"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }
